edition = "2023";

package harpoon.v1;

service AgentService {
	rpc Exec(stream ExecRequest) returns (stream ExecResponse);
}

message ExecRequest {
	string              argc           = 1;
	repeated string     argv           = 2;
	map<string, string> env_vars       = 3;
	bool                use_entrypoint = 4;
	bytes               stdin          = 5;
	bool                stream_done    = 6;
	string              error          = 7;
}

message ExecResponse {
	bytes  stdout      = 1;
	bytes  stderr      = 2;
	int32  exit_code   = 3;
	bool   stream_done = 4;
	string error       = 5;
}
